tools/clang/iterator_checker/tests/annotated-container.txt
annotated-container.cpp:23:4: error: [iterator-checker] Potentially invalid iterator used.
  *it;
   ^
annotated-container.cpp:34:6: error: [iterator-checker] Potentially invalid iterator used.
    *it;
     ^
2 errors generated.
